--- a/styles.css
+++ b/styles.css
@@ -182,18 +182,39 @@ header {
     height: 50px;
     width: 50px;
     border-radius: 25px;
+    transition: 0.2s;
+    aspect-ratio: 1 / 1;
+}
+
+.user-info > img:hover {
+    transform: scale(1.1);
+}
+
+.user-info > img:active {
+    transform: translateY(4px);
 }
 
 .user-banner{
     display: grid;
-    grid-template-columns: 1fr 5fr;
+    grid-template-rows: 80px;
+    grid-template-columns: 80px 5fr;
     align-self: center;
+    gap: 16px;
 }
 
 .user-banner > img {
     height: 80px;
     width: 80px;
     border-radius: 40px;
+    transition: 0.2s;
+}
+
+.user-banner > img:hover {
+    transform: scale(1.1);
+}
+
+.user-banner > img:active {
+    transform: translateY(4px);
 }
 
 .user-banner-info {
@@ -214,6 +235,16 @@ header {
     border-radius: 25px;
     border: none;
     padding: 4px 20px;
+    transition: 0.2s;
+}
+
+.user-buttons > button:hover {
+    transform: scale(1.1);
+    opacity: 0.8;
+}
+
+.user-buttons > button:active {
+    transform: translateY(4px);
 }
 
 .container {
@@ -326,7 +357,8 @@ header {
 .trending-cards a {
     text-decoration: none;
     display: grid;
-    grid-template-columns: 1fr 3fr;
+    grid-template-rows: min(50px, 1fr);
+    grid-template-columns: 50px 3fr;
     gap: 8px;
     transition: 0.2s;
 }
